set类型数据实现map的交集 并集 差集

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.github.dge1992</groupId>
-    <artifactId>springboot-redis</artifactId>
+    <artifactId>redis-utils</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-redis</name>
+    <name>redis-utils</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
